grammar.js
    source_file: ($) => repeat(choice($.statement, $.comment)),

    // Literals

    decimal_integer_literal: () =>
      token(seq(DIGITS, optional(choice("l", "L")))),

    hex_integer_literal: () =>
      token(seq(choice("0x", "0X"), HEX_DIGITS, optional(choice("l", "L")))),

    octal_integer_literal: () =>
      token(
        seq(
          choice("0o", "0O"),
          sep1(/[0-7]+/, "_"),
          optional(choice("l", "L")),
        ),
      ),

    binary_integer_literal: () =>
      token(
        seq(choice("0b", "0B"), sep1(/[01]+/, "_"), optional(choice("l", "L"))),
      ),

    decimal_floating_point_literal: () =>
      token(
        choice(
          seq(
            DIGITS,
            ".",
            optional(DIGITS),
            optional(seq(/[eE]/, optional(choice("-", "+")), DIGITS)),
            optional(/[fFdD]/),
          ),
          seq(
            ".",
            DIGITS,
            optional(seq(/[eE]/, optional(choice("-", "+")), DIGITS)),
            optional(/[fFdD]/),
          ),
          seq(
            DIGITS,
            /[eEpP]/,
            optional(choice("-", "+")),
            DIGITS,
            optional(/[fFdD]/),
          ),
          seq(
            DIGITS,
            optional(seq(/[eE]/, optional(choice("-", "+")), DIGITS)),
            /[fFdD]/,
          ),
        ),
      ),

    hex_floating_point_literal: () =>
      token(
        seq(
          choice("0x", "0X"),
          choice(
            seq(HEX_DIGITS, optional(".")),
            seq(optional(HEX_DIGITS), ".", HEX_DIGITS),
          ),
          optional(
            seq(
              /[eEpP]/,
              optional(choice("-", "+")),
              DIGITS,
              optional(/[fFdD]/),
            ),
          ),
        ),
      ),

    true: () => "true",

    false: () => "false",

    string_literal: ($) =>
      choice(
        $._sq_string_literal,
        $._dq_string_literal,
        $._triple_sq_string_literal,
        $._triple_dq_string_literal,
      ),

    _sq_string_literal: () =>
      token(seq("'", repeat(choice(/[^\\'\n]/, /\\./, /\\\n/)), "'")),

    _dq_string_literal: ($) =>
      seq(
        '"',
        repeat(
          choice(
            $._string_fragment,
            $._escape_sequence,
            $.string_interpolation,
          ),
        ),
        '"',
      ),

    _triple_sq_string_literal: () =>
      token(seq("'''", /([^'\\]|\\.|'[^']|''[^'])*/, "'''")),

    _triple_dq_string_literal: ($) =>
      seq(
        '"""',
        repeat(
          choice(
            alias($._multiline_string_fragment, $.multiline_string_fragment),
            $._escape_sequence,
            $.string_interpolation,
          ),
        ),
        '"""',
      ),

    string_interpolation: ($) =>
      choice(seq("${", $.expression, "}"), seq("$", $.identifier)),

    text_block: () =>
      token(
        choice(
          seq(
            '"""',
            /\s*\n/,
            optional(repeat(choice(/[^\\"]/, /\\(.)/))),
            '"""',
          ),
        ),
      ),

    null_literal: ($) => "null",

    // Expressions

    binary_expression: ($) =>
      choice(
        ...[
          ["<", PREC.GENERIC + 1],
          [">", PREC.REL],
          [">=", PREC.REL],
          ["<=", PREC.REL],
          ["in", PREC.REL],
          ["==", PREC.EQUALITY],
          ["!=", PREC.EQUALITY],
          ["&&", PREC.AND],
          ["||", PREC.OR],
          ["+", PREC.ADD],
          ["-", PREC.ADD],
          ["*", PREC.MULT],
          ["/", PREC.MULT],
          ["&", PREC.BIT_AND],
          ["|", PREC.BIT_OR],
          ["^", PREC.BIT_XOR],
          ["%", PREC.MULT],
          ["<<", PREC.SHIFT],
          [">>", PREC.SHIFT],
          [">>>", PREC.SHIFT],
          ["<=>", PREC.REL],
          ["?:", PREC.TERNARY],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      choice(
        ...[
          ["+", PREC.UNARY],
          ["-", PREC.UNARY],
          ["!", PREC.UNARY],
          ["~", PREC.UNARY],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(field("operator", operator), field("operand", $.expression)),
          ),
        ),
      ),

    parenthesized_expression: ($) =>
      prec(PREC.PARENS, seq("(", $.expression, ")")),

    object_creation_expression: ($) =>
      choice(
        $._unqualified_object_creation_expression,
        seq(
          $.primary_expression,
          ".",
          $._unqualified_object_creation_expression,
        ),
      ),

    _unqualified_object_creation_expression: ($) =>
      prec.right(
        seq(
          "new",
          field("type_arguments", optional($.type_arguments)),
          field("type", $._simple_type),
          $.object_creation_argument_list,
          optional($.class_body),
        ),
      ),

    object_creation_argument_list: ($) => seq("(", commaSep($.argument), ")"),

    argument: ($) =>
      choice(
        seq(field("name", choice($.identifier, $.string_literal)), ":", field("value", $.expression)),
        $.expression,
      ),

    field_access: ($) =>
      prec.dynamic(
        PREC.OBJ_ACCESS,
        seq(
          field("object", choice($.primary_expression, $.super)),
          optional(seq(".", $.super)),
          field("operator", choice(".", "?.", "*.")),
          field("field", choice($.identifier, $.this)),
        ),
      ),

    array_access: ($) =>
      seq(
        field("array", $.primary_expression),
        "[",
        field("index", $.expression),
        "]",
      ),

    method_invocation: ($) =>
      choice(
        $._simple_method_invocation,
        $._object_method_invocation,
        $._closure_method_invocation,
      ),

    _simple_method_invocation: ($) =>
      prec(
        PREC.CALL,
        seq(field("name", $.identifier), field("arguments", $.argument_list)),
      ),

    _object_method_invocation: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("object", choice($.primary_expression, $.super)),
          field("operator", choice(".", "?.", "*.")),
          optional(seq($.super, ".")),
          field("type_arguments", optional($.type_arguments)),
          field("name", $.identifier),
          choice(
            seq(
              field("arguments", $.argument_list),
              field("closure", optional($.closure)),
            ),
            field("arguments", $.argument_list),
            field("closure", $.closure),
          ),
        ),
      ),

    _closure_method_invocation: ($) =>
      prec.left(
        PREC.CALL,
        seq(
          field("object", choice($.primary_expression, $.super)),
          field("operator", choice(".", "?.", "*.")),
          field("name", $.identifier),
          optional("("),
          field("closure", $.closure),
          optional(")"),
        ),
      ),

    argument_list: ($) => seq("(", commaSep($.expression), ")"),

    type_arguments: ($) =>
      prec.right(
        PREC.GENERIC,
        seq(token.immediate("<"), commaSep(choice($._type, $.wildcard)), ">"),
      ),

    block: ($) => seq("{", repeat($.statement), "}"),

    closure: ($) =>
      seq(
        "{",
        optional(seq(commaSep1($.identifier), "->")),
        repeat($.statement),
        "}",
      ),

    expression_statement: ($) => prec.right(seq($.expression, optional(";"))),

    return_statement: ($) =>
      prec.right(seq("return", optional($.expression), optional(";"))),

    enhanced_for_statement: ($) =>
      seq(
        "for",
        "(",
        seq(
          optional($.modifiers),
          field("type", $._unannotated_type),
          $._variable_declarator_id,
          choice(":", "in"),
          field("value", $.expression),
        ),
        ")",
        field("body", $.statement),
      ),

    // Annotations

    _annotation: ($) => choice($.marker_annotation, $.annotation),

    marker_annotation: ($) => seq("@", field("name", $._name)),

    class_declaration: ($) =>
      prec.right(
        5,
        seq(
          optional($.modifiers),
          "class",
          field("name", $.identifier),
          optional(field("type_parameters", $.type_parameters)),
          optional(field("superclass", $.superclass)),
          optional(field("interfaces", $.super_interfaces)),
          optional(field("permits", $.permits)),
          field("body", $.class_body),
        ),
      ),

    modifiers: ($) =>
      prec(
        5,
        repeat1(
          choice(
            $._annotation,
            "public",
            "protected",
            "private",
            "abstract",
            "static",
            "final",
            "strictfp",
            "default",
            "synchronized",
            "native",
            "transient",
            "volatile",
            "sealed",
            "non-sealed",
          ),
        ),
      ),

    class_body: ($) => seq("{", repeat($._class_body_declaration), "}"),

    _class_body_declaration: ($) =>
      choice(
        $.field_declaration,
        $.record_declaration,
        $.method_declaration,
        $.compact_constructor_declaration, // For records.
        $.class_declaration,
        $.interface_declaration,
        $.annotation_type_declaration,
        $.enum_declaration,
        $.block,
        $.static_initializer,
        $.constructor_declaration,
        ";",
      ),

    _name: ($) => choice($.identifier, $.scoped_identifier),

    _variable_declarator_list: ($) =>
      commaSep1(field("declarator", $.variable_declarator)),

    variable_declarator: ($) =>
      prec.right(
        seq(
          $._variable_declarator_id,
          optional(seq("=", field("value", $._variable_initializer))),
        ),
      ),

    _variable_declarator_id: ($) => seq(field("name", $.identifier)),

    _variable_initializer: ($) => choice($.expression, $.array_initializer),

    _type: ($) =>
      prec.left(PREC.TYPE, choice($._unannotated_type, $.annotated_type)),

    _unannotated_type: ($) =>
      prec.right(PREC.TYPE, choice($._simple_type, $.array_type)),

    generic_type: ($) =>
      prec.right(
        PREC.GENERIC,
        seq(
          choice(
            alias($.identifier, $.type_identifier),
            $.scoped_type_identifier,
          ),
          $.type_arguments,
        ),
      ),

    void_type: () => "void",

    _method_header: ($) =>
      seq(
        optional(
          seq(
            field("type_parameters", $.type_parameters),
            repeat($._annotation),
          ),
        ),
        field("type", $._unannotated_type),
        $._method_declarator,
        optional($.throws),
      ),

    formal_parameters: ($) =>
      prec(
        PREC.LAMBDA,
        seq(
          "(",
          optional($.receiver_parameter),
          commaSep(choice($.formal_parameter, $.spread_parameter)),
          ")",
        ),
      ),

    formal_parameter: ($) =>
      seq(
        optional($.modifiers),
        field("type", $._unannotated_type),
        $._variable_declarator_id,
        optional(seq("=", field("default_value", $.expression))),
      ),

    variable_declaration: ($) =>
      prec.right(
        PREC.DECL,
        seq(
          optional("final"),
          // repeat($._annotation),
          choice("def", "var", field("type", $._unannotated_type)),
          $._variable_declarator_list,
          optional(";"),
        ),
      ),

    method_declaration: ($) =>
      prec.right(
        seq(
          optional($.modifiers),
          $._method_header,
          optional(field("body", $.block)),
          optional(";"),
        ),
      ),

    identifier: () => /[\p{L}_$][\p{L}\p{Nd}_$]*/,

    // http://stackoverflow.com/questions/13014947/regex-to-match-a-c-style-multiline-comment/36328890#36328890
    line_comment: () => token(prec(PREC.COMMENT, seq("//", /[^\n]*/))),

    groovydoc_comment: () =>
      token(prec(PREC.COMMENT + 1, seq("/**", /([^*]|\*[^/])*/, "*/"))),
  },
});

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
