test/corpus/groovydoc_comments.test
================================================================================
groovydoc with double asterisk ending
================================================================================
/**
 * @param value the input parameter
 * @return processed result
 **/
@Entity
class DataProcessor {
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    documentation: (groovydoc_comment)
    (modifiers
      (marker_annotation
        name: (identifier)))
    name: (identifier)
    body: (class_body)))

================================================================================
groovydoc with single asterisk ending
================================================================================
/**
 * Standard groovydoc comment
 * @since version 1.0
 */
@Service
class BusinessLogic {
}
--------------------------------------------------------------------------------

(source_file
  (class_declaration
    documentation: (groovydoc_comment)
    (modifiers
      (marker_annotation
        name: (identifier)))
    name: (identifier)
    body: (class_body)))
