test/corpus/method_calls.test
================================================================================
simple method call
================================================================================
println("hello")
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (argument_list
        (string_literal)))))

================================================================================
method call without arguments
================================================================================
doSomething()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (argument_list))))

================================================================================
method call on object
================================================================================
obj.method()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (identifier)
      (argument_list))))

================================================================================
chained method calls
================================================================================
obj.method1().method2().method3()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (method_invocation
        (method_invocation
          (identifier)
          (identifier)
          (argument_list))
        (identifier)
        (argument_list))
      (identifier)
      (argument_list))))

================================================================================
method call with multiple arguments
================================================================================
calculate(a, b, c)
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (argument_list
        (identifier)
        (identifier)
        (identifier)))))

================================================================================
method call with mixed argument types
================================================================================
process("text", 42, true, null)
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (argument_list
        (string_literal)
        (decimal_integer_literal)
        (true)
        (null_literal)))))

================================================================================
static method call
================================================================================
Math.max(a, b)
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (identifier)
      (argument_list
        (identifier)
        (identifier)))))

================================================================================
method call with field access
================================================================================
obj.field.method()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (field_access
        (identifier)
        (identifier))
      (identifier)
      (argument_list))))

================================================================================
method call with safe navigation
================================================================================
obj?.method()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (identifier)
      (argument_list))))

================================================================================
method call with spread operator
================================================================================
obj*.method()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (identifier)
      (argument_list))))

================================================================================
method call with closure
================================================================================
obj.method { }
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (identifier)
      (closure))))

================================================================================
method call with parens and closure
================================================================================
list.find({i -> i})
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      (identifier)
      (identifier)
      (argument_list
        (closure
          (identifier)
          (expression_statement
            (identifier)))))))

================================================================================
nested method call with closure in arguments
================================================================================
outer(list.collect({ it.id }))
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      name: (identifier)
      arguments: (argument_list
        (method_invocation
          object: (identifier)
          name: (identifier)
          arguments: (argument_list
            (closure
              (expression_statement
                (field_access
                  object: (identifier)
                  field: (identifier))))))))))

================================================================================
method call with closure in parentheses
================================================================================
list.collect({ it.toString() })
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (method_invocation
      object: (identifier)
      name: (identifier)
      arguments: (argument_list
        (closure
          (expression_statement
            (method_invocation
              object: (identifier)
              name: (identifier)
              arguments: (argument_list))))))))
