test/corpus/object_creation.test
================================================================================
simple object creation
================================================================================
new ArrayList()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (object_creation_expression
      (type_identifier)
      (object_creation_argument_list))))

================================================================================
object creation with arguments
================================================================================
new Person("John", 30)
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (object_creation_expression
      (type_identifier)
      (object_creation_argument_list
        (argument
          (string_literal))
        (argument
          (decimal_integer_literal))))))

================================================================================
object creation with named arguments
================================================================================
new Person(name: "John", age: 30)
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (object_creation_expression
      (type_identifier)
      (object_creation_argument_list
        (argument
          (identifier)
          (string_literal))
        (argument
          (identifier)
          (decimal_integer_literal))))))

================================================================================
generic object creation
================================================================================
new ArrayList<String>()
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (object_creation_expression
      (generic_type
        (type_identifier)
        (type_arguments
          (type_identifier)))
      (object_creation_argument_list))))

================================================================================
nested object creation
================================================================================
new Container(new Item("value"))
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (object_creation_expression
      (type_identifier)
      (object_creation_argument_list
        (argument
          (object_creation_expression
            (type_identifier)
            (object_creation_argument_list
              (argument
                (string_literal)))))))))

================================================================================
object creation with string literal named parameters
================================================================================
new SomeClass("key1": obj.field1,
                "key2": obj.field2,
                "key3": obj.field3)
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (object_creation_expression
      (type_identifier)
      (object_creation_argument_list
        (argument
          (string_literal)
          (field_access
            (identifier)
            (identifier)))
        (argument
          (string_literal)
          (field_access
            (identifier)
            (identifier)))
        (argument
          (string_literal)
          (field_access
            (identifier)
            (identifier)))))))
