test/corpus/string_literals.test
================================================================================
single quoted string
================================================================================
'hello world'
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (string_literal)))

================================================================================
double quoted string  
================================================================================
"hello world"
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (string_literal)))

================================================================================
triple single quoted multiline string
================================================================================
'''
This is a
multiline string
'''
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (string_literal)))

================================================================================
triple double quoted multiline string
================================================================================
"""
This is a
multiline string
"""
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (text_block)))

================================================================================
string with escape sequences
================================================================================
"Hello\nWorld\t!"
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (string_literal)))

================================================================================
single quoted string with escaped quotes
================================================================================
'It\'s a beautiful day'
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (string_literal)))

================================================================================
single quoted string with space
================================================================================
' '
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (string_literal)))

================================================================================
empty double quoted string
================================================================================
""
--------------------------------------------------------------------------------
(source_file
  (expression_statement
    (string_literal)))

